Alterando posição do botão de Voltar na página de Ramais.html

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .localz{
     position: fixed !important;
-    left: 120px;
+    left: 1vw;
     bottom: 20px;
     /* background-color: red !important; */
 }
